# options-sim

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
scripts/: download_data.py  generate_sample.py
src/options_sim/: __init__.py  cli.py  engine.py  execution.py  live_engine.py  portfolio.py  pricing.py  scanner.py
src/options_sim/data/: __init__.py  base.py  csv_loader.py  polygon.py  polygon_live.py  schema.py  thetadata.py
tests/: conftest.py  test_cli_live.py  test_engine.py  test_execution.py  test_integration.py  test_live_engine.py  test_polygon_live.py  test_portfolio.py  test_pricing.py  test_scanner.py
