[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-sim"
version = "0.1.0"
description = "Options trading simulation environment for AI agents — historical replay, realistic execution, Greeks calculation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Brandon Wise", email = "brandon@brandonwise.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
vollib = ["py_vollib>=1.0.0"]
polygon = ["requests>=2.28.0"]
parquet = ["pyarrow>=12.0.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
all = [
    "py_vollib>=1.0.0",
    "requests>=2.28.0",
    "pyarrow>=12.0.0",
]

[project.scripts]
options-sim = "options_sim.cli:main"

[project.urls]
Homepage = "https://github.com/brandonwise/options-sim"
Repository = "https://github.com/brandonwise/options-sim"
Issues = "https://github.com/brandonwise/options-sim/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]  # N803/N806: S, K, T are standard BSM notation

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
